--- a/index-style.css
+++ b/index-style.css
@@ -189,7 +189,7 @@ h1 {
 		margin: 0px;
 		text-align: left;
 		padding-left: 5vw;
-		padding-top: 14vh;
+		padding-top: 5vh;
 		font-family: visbyround-regular;
 		font-size: 4.5vh;
 	}
